# FL

CNN_Model/: pyproject.toml
CNN_Model/CNN_Model/: client.py  server.py  task.py
FL/CNN_Model/: pyproject.toml
FL/CNN_Model/CNN_Model/: client.py  server.py  task.py
FL/CNN_TEXT/: pyproject.toml
FL/CNN_TEXT/CNN_TEXT/: client_app.py  server_app.py  strategy.py  task.py  test.py
FL/CNN_TEXT/outputs/2025-03-12/17-03-27/: results.json
FL/CNN_TEXT/outputs/2025-03-12/17-28-15/: results.json
FL/CNN_TEXT/outputs/2025-03-12/17-29-25/: results.json
FL/CNN_TEXT/outputs/2025-03-12/17-30-01/: results.json
FL/CNN_TEXT/outputs/2025-03-12/17-30-40/: results.json  run_config.json
FL/CNN_TEXT/outputs/2025-03-12/18-12-52/: results.json
FL/CNN_TEXT/outputs/2025-03-12/18-39-42/: results.json
FL/CNN_TEXT/outputs/2025-03-12/18-41-34/: results.json
FL/CNN_TEXT/outputs/2025-03-12/18-42-29/: results.json  run_config.json
FL/CNN_TEXT/wandb/: latest-run
FL/CNN_TEXT/wandb/run-20250312_170328-z7rs2g0j/: run-z7rs2g0j.wandb
FL/CNN_TEXT/wandb/run-20250312_170328-z7rs2g0j/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/CNN_TEXT/wandb/run-20250312_172816-fxj3mxe2/: run-fxj3mxe2.wandb
FL/CNN_TEXT/wandb/run-20250312_172816-fxj3mxe2/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
FL/CNN_TEXT/wandb/run-20250312_172926-4yglobhe/: run-4yglobhe.wandb
FL/CNN_TEXT/wandb/run-20250312_172926-4yglobhe/files/: config.yaml  wandb-metadata.json
FL/CNN_TEXT/wandb/run-20250312_173002-2n1j07ke/: run-2n1j07ke.wandb
FL/CNN_TEXT/wandb/run-20250312_173002-2n1j07ke/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/CNN_TEXT/wandb/run-20250312_173042-af44jk5e/: run-af44jk5e.wandb
FL/CNN_TEXT/wandb/run-20250312_173042-af44jk5e/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
FL/CNN_TEXT/wandb/run-20250312_181253-xlsh0fa4/: run-xlsh0fa4.wandb
FL/CNN_TEXT/wandb/run-20250312_181253-xlsh0fa4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/CNN_TEXT/wandb/run-20250312_183943-nxmjw8eq/: run-nxmjw8eq.wandb
FL/CNN_TEXT/wandb/run-20250312_183943-nxmjw8eq/files/: config.yaml  requirements.txt  wandb-metadata.json
FL/CNN_TEXT/wandb/run-20250312_184135-djzucdu2/: run-djzucdu2.wandb
FL/CNN_TEXT/wandb/run-20250312_184135-djzucdu2/files/: config.yaml  wandb-metadata.json
FL/CNN_TEXT/wandb/run-20250312_184230-tzbj99g8/: run-tzbj99g8.wandb
FL/CNN_TEXT/wandb/run-20250312_184230-tzbj99g8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/JAX_text/JAX_text/: task.py
FL/cnn-img/: README.md  pyproject.toml
FL/cnn-img/cnn_img/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
FL/cnn-img/outputs/2025-03-18/18-09-28/: model_state_acc_0.1002_round_0.pth  results.json
FL/cnn-img/outputs/2025-03-18/18-11-21/: model_state_acc_0.1699_round_2.pth  model_state_acc_0.1_round_0.pth  model_state_acc_0.205_round_3.pth  model_state_acc_0.2836_round_4.pth  model_state_acc_0.3142_round_5.pth  model_state_acc_0.3207_round_6.pth  model_state_acc_0.3359_round_7.pth  results.json
FL/cnn-img/outputs/2025-03-18/18-18-01/: model_state_acc_0.1006_round_0.pth  model_state_acc_0.1513_round_2.pth  results.json
FL/cnn-img/outputs/2025-03-18/18-20-35/: model_state_acc_0.1177_round_3.pth  model_state_acc_0.1779_round_4.pth  model_state_acc_0.1_round_0.pth  model_state_acc_0.2043_round_5.pth  model_state_acc_0.2199_round_6.pth  model_state_acc_0.2285_round_7.pth  model_state_acc_0.2386_round_8.pth  model_state_acc_0.248_round_9.pth  model_state_acc_0.2617_round_10.pth  results.json  run_config.json
FL/cnn-img/wandb/: latest-run
FL/cnn-img/wandb/run-20250318_180929-nggp58h1/: run-nggp58h1.wandb
FL/cnn-img/wandb/run-20250318_180929-nggp58h1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/cnn-img/wandb/run-20250318_181122-bf8ntn4x/: run-bf8ntn4x.wandb
FL/cnn-img/wandb/run-20250318_181122-bf8ntn4x/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
FL/cnn-img/wandb/run-20250318_181802-7xfmx100/: run-7xfmx100.wandb
FL/cnn-img/wandb/run-20250318_181802-7xfmx100/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
FL/cnn-img/wandb/run-20250318_182036-pcqlb6vm/: run-pcqlb6vm.wandb
FL/cnn-img/wandb/run-20250318_182036-pcqlb6vm/files/: config.yaml  wandb-metadata.json  wandb-summary.json
FL/nujax/: README.md  pyproject.toml
FL/nujax/nujax/: __init__.py  client_app.py  server_app.py  task.py
FL/pytorch/: README.md  pyproject.toml
(+4 files in other folders)
