[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CNN_Model"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "scikit-learn>=1.3.2",  # Changed '=' to '>='
]

[tool.hatch.build.targets.wheel]
packages = ["."]
 
[tool.flwr.app]
publisher = "CNN_Model"

[tool.flwr.app.components]
serverapp = "CNN_Model.server:app"
clientapp = "CNN_Model.client:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 0.5
local-epochs = 100

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
