[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nujax"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.11.1",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "scikit-learn==1.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nujax"

[tool.flwr.app.components]
serverapp = "nujax.server_app:app"
clientapp = "nujax.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
input-dim = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
